--- a/classicViewer.html
+++ b/classicViewer.html
@@ -3,11 +3,49 @@
   <head lang="en">
     <meta charset="UTF-8" />
     <title>Stream Service Viewer</title>
-    <!-- Gives us calcite based design - does not seem to interfere with the 3x css -->
-    <link
-      rel="stylesheet"
-      href="https://js.arcgis.com/4.25/esri/themes/light/main.css"
-    />
+    <style>
+      .esri-button {
+        align-items:center;
+        background-color:#0079c1;
+        border:1px solid #0079c1;
+        color:#fff;
+        cursor:pointer;
+        display:flex;
+        font-family:inherit;
+        font-size:14px;
+        min-height:32px;
+        justify-content:center;
+        word-break:normal;
+        white-space:normal;
+        overflow:hidden;
+        padding:6px 7px;
+        width:100%;
+        transition:background-color 125ms ease-in-out,border 125ms ease-in-out
+      }
+
+      .esri-button:hover {
+        background-color:#00598e;
+        border:1px solid #00598e;
+        color:#fff
+      }
+
+      .esri-button--disabled {
+        opacity:.4;
+        pointer-events:none
+      }
+
+      .esri-input {
+        background-color:#fff;
+        border:1px solid #959595;
+        color:#323232;
+        font-family:"Avenir Next","Helvetica Neue",Helvetica,Arial,sans-serif;
+        font-size:14px
+      }
+      .esri-input[type=text] {
+        height:32px;
+        padding:0 .5em
+      }
+    </style>
     <link
       rel="stylesheet"
       href="https://js.arcgis.com/3.42/esri/css/esri.css"
@@ -103,10 +141,13 @@
             spatialFilter = evt.geometry;
             drawSpatialFilter(spatialFilter);
             if (streamLayer) streamLayer.setGeometryDefinition(spatialFilter);
-            domAttr.remove(dojo.byId("clearSpatialFilter"), "disabled");
+            domClass.remove(dojo.byId("clearSpatialFilter"), "esri-button--disabled");
           });
           on(dojo.byId("switchViewer"), "click", function () {
             window.location.href = "./currentViewer.html";
+          });
+          on(dojo.byId("clear"), "click", function () {
+            dojo.byId("panelMessage").innerText = "";
           });
         }
 
@@ -120,6 +161,16 @@
             document.getElementsByTagName("body")[0],
             "panel-collapsed"
           );
+        }
+
+        function createToaster(message, type) {
+          const msg =
+            type === "success"
+              ? document.createTextNode("\u2713 " + message)
+              : document.createTextNode("\u2716 " + message);
+          const element = document.createElement("span");
+          element.appendChild(msg);
+          document.getElementById("panelMessage").prepend(element);
         }
 
         /*************************************************
@@ -163,7 +214,7 @@
             streamLayer.on("message", onMessage);
             streamLayer.on("connection-error", function () {
               removeStreamLayer();
-              alert("Error connecting to the Stream Service");
+              createToaster("Error connecting to the Stream Service", "error");
             });
 
             // Add popup template
@@ -234,13 +285,13 @@
 
         function onMessage(msg) {
           if (msg.error) {
-            alert(msg.error[0]);
+            createToaster(msg.error[0], "error");
           } else if (msg.filter) {
             if (
               msg.filter.hasOwnProperty("where") ||
               msg.filter.hasOwnProperty("geometry")
             ) {
-              alert(
+              createToaster(
                 "Successfully updated the filter. \nAttribute Filter: " +
                   (msg.filter.where || "") +
                   "\nSpatial Filter: " +
@@ -248,12 +299,14 @@
                     ? typeof msg.filter.geometry === "object"
                       ? JSON.stringify(msg.filter.geometry)
                       : msg.filter.geometry
-                    : "")
+                    : ""),
+                "success"
               );
             } else {
-              alert(
-                "Successfully updated the filter. \n\nAttribute Filter: \n Spatial Filter: "
-              );
+              createToaster(
+                "Successfully updated the filter. \n\nAttribute Filter: \nSpatial Filter: ",
+                "success"
+              );  
             }
           }
         }
@@ -377,7 +430,7 @@
             />
             <button id="applyWhereClause" class="esri-button">Apply</button>
           </div>
-          <div class="input-group">
+          <div class="input-group input-group-full">
             <div class="input-row">
               <button id="applySpatialFilter" class="prev-element esri-button">
                 Apply Spatial Filter
@@ -389,6 +442,14 @@
                 Clear Spatial Filter
               </button>
             </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="config-content">
+          <div id="panelWrapper">
+            <h4 id="panelHeading">Messages <span id="clear">clear</span></h4>
+            <p id="panelMessage"></p>
           </div>
         </div>
       </section>
