--- a/classicViewer.html
+++ b/classicViewer.html
@@ -3,22 +3,55 @@
   <head lang="en">
     <meta charset="UTF-8" />
     <title>Stream Service Viewer</title>
+    <style>
+      .esri-button {
+        align-items:center;
+        background-color:#0079c1;
+        border:1px solid #0079c1;
+        color:#fff;
+        cursor:pointer;
+        display:flex;
+        font-family:inherit;
+        font-size:14px;
+        min-height:32px;
+        justify-content:center;
+        word-break:normal;
+        white-space:normal;
+        overflow:hidden;
+        padding:6px 7px;
+        width:100%;
+        transition:background-color 125ms ease-in-out,border 125ms ease-in-out
+      }
+
+      .esri-button:hover {
+        background-color:#00598e;
+        border:1px solid #00598e;
+        color:#fff
+      }
+
+      .esri-button--disabled {
+        opacity:.4;
+        pointer-events:none
+      }
+
+      .esri-input {
+        background-color:#fff;
+        border:1px solid #959595;
+        color:#323232;
+        font-family:"Avenir Next","Helvetica Neue",Helvetica,Arial,sans-serif;
+        font-size:14px
+      }
+      .esri-input[type=text] {
+        height:32px;
+        padding:0 .5em
+      }
+    </style>
     <link
       rel="stylesheet"
       href="https://js.arcgis.com/3.42/esri/css/esri.css"
     />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://js.arcgis.com/calcite-components/1.0.0-beta.97/calcite.css"
-    />
     <link rel="stylesheet" href="./streamServiceViewerStyles.css" />
     <script src="https://js.arcgis.com/3.42/"></script>
-    <script src="https://use.fontawesome.com/9482a0b1d1.js"></script>
-    <script
-      type="module"
-      src="https://js.arcgis.com/calcite-components/1.0.0-beta.97/calcite.esm.js"
-    ></script>
     <script>
       require([
         "dojo/parser",
@@ -39,7 +72,7 @@
         "dijit/TitlePane",
         "dijit/layout/ContentPane",
         "dojo/domReady!"
-      ], function(
+      ], function (
         parser,
         Map,
         Draw,
@@ -56,7 +89,7 @@
         domClass,
         domAttr
       ) {
-        var map, drawTools, streamLayer, spatialFilter, expressionFilter;
+        let map, drawTools, streamLayer, spatialFilter, expressionFilter;
 
         parser.parse();
 
@@ -82,9 +115,9 @@
           on(
             dojo.byId("controls"),
             on.selector(".config-header", "click"),
-            function(e) {
+            function (e) {
               if (e.target.type !== "checkbox") {
-                var sectionWrapper = e.selectorTarget.parentNode;
+                const sectionWrapper = e.selectorTarget.parentNode;
 
                 domClass.toggle(sectionWrapper, "section-hidden");
               }
@@ -97,21 +130,24 @@
           );
           on(dojo.byId("subscribeUnsubscribe"), "click", toggleSubscription);
           on(dojo.byId("toggleStreamLayer"), "click", toggleStreamLayer);
-          on(dojo.byId("clearPreviousObservations"), "click", function() {
+          on(dojo.byId("clearPreviousObservations"), "click", function () {
             if (streamLayer) streamLayer.clear();
           });
           on(dojo.byId("applyWhereClause"), "click", applyWhereClause);
           on(dojo.byId("applySpatialFilter"), "click", applySpatialFilter);
           on(dojo.byId("clearSpatialFilter"), "click", clearSpatialFilter);
-          on(drawTools, "draw-end", function(evt) {
+          on(drawTools, "draw-end", function (evt) {
             drawTools.deactivate();
             spatialFilter = evt.geometry;
             drawSpatialFilter(spatialFilter);
             if (streamLayer) streamLayer.setGeometryDefinition(spatialFilter);
-            domAttr.remove(dojo.byId("clearSpatialFilter"), "disabled");
+            domClass.remove(dojo.byId("clearSpatialFilter"), "esri-button--disabled");
           });
-          on(dojo.byId("switchViewer"), "click", function() {
+          on(dojo.byId("switchViewer"), "click", function () {
             window.location.href = "./currentViewer.html";
+          });
+          on(dojo.byId("clear"), "click", function () {
+            dojo.byId("panelMessage").innerText = "";
           });
         }
 
@@ -127,23 +163,14 @@
           );
         }
 
-        function createToaster(title, message, color) {
-          var calciteAlert = document.createElement("calcite-alert");
-          var alertTitle = document.createElement("div");
-          var alertMessage = document.createElement("div");
-
-          calciteAlert.setAttribute("open", "true");
-          calciteAlert.setAttribute("color", color);
-          calciteAlert.setAttribute("placement", "bottom-end");
-          alertTitle.setAttribute("slot", "title");
-          alertMessage.setAttribute("slot", "message");
-
-          alertTitle.innerText = title;
-          alertMessage.innerText = message;
-
-          calciteAlert.appendChild(alertTitle);
-          calciteAlert.appendChild(alertMessage);
-          document.getElementsByTagName("body")[0].appendChild(calciteAlert);
+        function createToaster(message, type) {
+          const msg =
+            type === "success"
+              ? document.createTextNode("\u2713 " + message)
+              : document.createTextNode("\u2716 " + message);
+          const element = document.createElement("span");
+          element.appendChild(msg);
+          document.getElementById("panelMessage").prepend(element);
         }
 
         /*************************************************
@@ -169,7 +196,7 @@
 
         function addStreamLayer() {
           //url to stream service
-          var svcUrl = dojo.byId("streamServiceUrl").value;
+          const svcUrl = dojo.byId("streamServiceUrl").value;
 
           //construct Stream Layer
           streamLayer = new StreamLayer(svcUrl, {
@@ -180,22 +207,18 @@
           });
 
           //When layer loads, register listeners for layer events and add layer to map
-          streamLayer.on("load", function() {
+          streamLayer.on("load", function () {
             //Connect and Disconnect events
             streamLayer.on("connect", onLayerConnected);
             streamLayer.on("disconnect", onLayerDisconnected);
             streamLayer.on("message", onMessage);
-            streamLayer.on("connection-error", function() {
-              createToaster(
-                "Alert",
-                "Error connecting to the Stream Service",
-                "red"
-              );
+            streamLayer.on("connection-error", function () {
               removeStreamLayer();
+              createToaster("Error connecting to the Stream Service", "error");
             });
 
             // Add popup template
-            var fieldInfos = array.map(streamLayer.fields, function(field) {
+            const fieldInfos = array.map(streamLayer.fields, function (field) {
               return {
                 fieldName: field.name,
                 label: field.alias,
@@ -203,7 +226,7 @@
               };
             });
 
-            var template = new PopupTemplate({
+            const template = new PopupTemplate({
               fieldInfos: fieldInfos
             });
             streamLayer.setInfoTemplate(template);
@@ -228,20 +251,28 @@
         function onLayerAdded(event) {
           if (streamLayer && streamLayer.name === event.layer.name) {
             dojo.byId("toggleStreamLayer").innerText = "Remove Stream Layer";
-            domAttr.remove(dojo.byId("clearPreviousObservations"), "disabled");
-            domAttr.remove(dojo.byId("subscribeUnsubscribe"), "disabled");
+            domClass.add(
+              dojo.byId("clearPreviousObservations"),
+              "esri-button--disabled"
+            );
+            domClass.remove(
+              dojo.byId("subscribeUnsubscribe"),
+              "esri-button--disabled"
+            );
           }
         }
 
         function onLayerRemoved() {
           dojo.byId("toggleStreamLayer").innerText = "Add Stream Layer";
-          domAttr.set(
+          domClass.add(
             dojo.byId("clearPreviousObservations"),
-            "disabled",
-            "true"
+            "esri-button--disabled"
           );
           dojo.byId("subscribeUnsubscribe").innerText = "Unsubscribe";
-          domAttr.set(dojo.byId("subscribeUnsubscribe"), "disabled", "true");
+          domClass.add(
+            dojo.byId("subscribeUnsubscribe"),
+            "esri-button--disabled"
+          );
         }
 
         function onLayerConnected() {
@@ -254,14 +285,13 @@
 
         function onMessage(msg) {
           if (msg.error) {
-            createToaster("Alert", msg.error[0], "red");
+            createToaster(msg.error[0], "error");
           } else if (msg.filter) {
             if (
               msg.filter.hasOwnProperty("where") ||
               msg.filter.hasOwnProperty("geometry")
             ) {
               createToaster(
-                "Success",
                 "Successfully updated the filter. \nAttribute Filter: " +
                   (msg.filter.where || "") +
                   "\nSpatial Filter: " +
@@ -270,14 +300,13 @@
                       ? JSON.stringify(msg.filter.geometry)
                       : msg.filter.geometry
                     : ""),
-                "green"
+                "success"
               );
             } else {
               createToaster(
-                "Success",
-                "Successfully updated the filter. \n\nAttribute Filter: \n Spatial Filter: ",
-                "green"
-              );
+                "Successfully updated the filter. \n\nAttribute Filter: \nSpatial Filter: ",
+                "success"
+              );  
             }
           }
         }
@@ -301,7 +330,10 @@
           spatialFilter = null;
           map.graphics.clear();
           if (streamLayer) streamLayer.setGeometryDefinition(null);
-          domAttr.set(dojo.byId("clearSpatialFilter"), "disabled", "true");
+          domClass.add(
+            dojo.byId("clearSpatialFilter"),
+            "esri-button--disabled"
+          );
         }
 
         function drawSpatialFilter(bbox) {
@@ -329,7 +361,6 @@
       });
     </script>
   </head>
-
   <body class="flat">
     <div id="map">
       <div class="basemapGallery-container">
@@ -339,7 +370,7 @@
         >
           <div
             data-dojo-type="dijit/layout/ContentPane"
-            style="width:380px; height:280px; overflow:auto;"
+            style="width: 380px; height: 280px; overflow: auto"
           >
             <div id="basemapGallery"></div>
           </div>
@@ -355,67 +386,80 @@
         <div class="config-header">
           <h2>Layers</h2>
           <div class="header-actions-group">
-            <i class="fa"></i>
+            <i id="collapsedPane" class="fa flat-chevron-down"></i>
+            <i id="expandedPane" class="fa flat-chevron-up"></i>
           </div>
         </div>
         <div class="config-content">
-          <div class="input-group input-group-full">
-            <calcite-input
+          <div class="input-group input-group-full input-group-flex">
+            <input
               type="text"
               id="streamServiceUrl"
+              class="esri-input"
               placeholder="Stream layer url"
-              value="https://geoeventsample1.esri.com/server/rest/services/FAAStream/StreamServer"
-            ></calcite-input>
+              value="https:/geoeventsample1.esri.com/server/rest/services/FAAStream/StreamServer"
+            />
           </div>
           <div class="input-group input-group-full">
-            <calcite-button id="toggleStreamLayer" width="full"
-              >Add Stream Layer</calcite-button
-            >
+            <button id="toggleStreamLayer" class="esri-button">
+              Add Stream Layer
+            </button>
           </div>
           <div class="input-group input-group-full">
-            <calcite-button
+            <button
               id="subscribeUnsubscribe"
-              width="full"
-              disabled="true"
-              >Unsubscribe</calcite-button
+              class="esri-button esri-button--disabled"
             >
+              Unsubscribe
+            </button>
           </div>
           <div class="input-group input-group-full">
-            <calcite-button
+            <button
               id="clearPreviousObservations"
-              width="full"
-              disabled="true"
-              >Clear Previous Observations</calcite-button
+              class="esri-button esri-button--disabled"
             >
+              Clear Previous Observations
+            </button>
           </div>
-          <div class="input-group input-group-full">
-            <calcite-input
+          <div class="input-group input-group-full input-group-flex">
+            <input
               id="expressionFilter"
+              class="esri-input"
               type="text"
               placeholder="Attribute Filter (where clause)"
-            >
-              <calcite-button id="applyWhereClause" slot="action"
-                >Apply</calcite-button
-              >
-            </calcite-input>
+            />
+            <button id="applyWhereClause" class="esri-button">Apply</button>
           </div>
-          <div class="input-group">
+          <div class="input-group input-group-full">
             <div class="input-row">
-              <calcite-button id="applySpatialFilter" class="prev-element"
-                >Apply Spatial Filter</calcite-button
+              <button id="applySpatialFilter" class="prev-element esri-button">
+                Apply Spatial Filter
+              </button>
+              <button
+                id="clearSpatialFilter"
+                class="esri-button esri-button--disabled"
               >
-              <calcite-button id="clearSpatialFilter" disabled="true"
-                >Clear Spatial Filter</calcite-button
-              >
+                Clear Spatial Filter
+              </button>
             </div>
           </div>
         </div>
       </section>
-      <calcite-button
-        id="switchViewer"
-        style="position: absolute; bottom: 0; right: 0; z-index: 1; margin: 5px;"
-        >Switch to Current Viewer</calcite-button
+      <section>
+        <div class="config-content">
+          <div id="panelWrapper">
+            <h4 id="panelHeading">Messages <span id="clear">clear</span></h4>
+            <p id="panelMessage"></p>
+          </div>
+        </div>
+      </section>
+      <section
+        style="position: absolute; bottom: 0; right: 0; padding: 5px 10px"
       >
+        <button id="switchViewer" class="esri-button">
+          Switch to Current Viewer
+        </button>
+      </section>
     </div>
   </body>
 </html>
